# cookiecutter

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/variables/: variables_dev.json
